--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -1,5 +1,5 @@
 .home-hero-header{
-    background: url(../../images//home-bg.jpg);
+    background: url(../../images//home-bg.webp);
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
